LATEST VERSION
-----------------------------

ilivalidator 1.11.5 (2020-04-01)
-----------------------------
- Missing check when write to "unwriteable" log-file (#228)
- NPE with ili23 / RoadsExgm2ien_Symbols-20160121.xml (#231)
- ArrayIndexOutOfBoundsException with n-ary association (#232)
- Xtf24: wrong xmlns for extended attributes (#235)
- Xtf24: fails to read STRUCTUREs defined at model level (#236)
- Xtf24: missing line number in messages (#237)
- Xtf24: fails to read ref of embedded assoc with attrs (#238)
- GUI: "Job done" message in GUI (#234)
- GUI: scroll log area to end (#234)
- ili2c-5.0.8
- ehibasics-1.3.0
- iox-ili-1.20.18

ilivalidator 1.11.4 (2020-03-02)
-----------------------------
- Command line: use options without a data-file (#223)
- java.lang.NullPointerException when starting filelist (#224)
- Unique constraints violation throws NPE (ili1) (#225)
- iox-ili-1.20.17
- ili2c-5.0.6

ilivalidator 1.11.3 (2019-12-23)
-----------------------------
- Unable to detect out model name for ili22 (#214)
- NPE when reference to main table is missing in surface table (ili1) (#213)
- Error: polygons overlay (#202)
- iox-ili-1.20.15

ilivalidator 1.11.2 (2019-11-08)
-----------------------------
- fix objectCount(UNDEFINED) (#203)
- add User+start date/time to log
- iox-ili-1.20.14

ilivalidator 1.11.1 (2019-09-20)
-----------------------------
- fails to report superfluous TIDs (#201)
- ili2c-5.0.2
- iox-ili-1.20.13

ilivalidator 1.11.0 (2019-04-03)
-----------------------------
- incomplete attribute path in error message
- new config parameter to report inconsistent model version
- new function --check-repo-data
- new function --updateIliData
- new function --createIliData
- GUI: create menu items for cmdline options
- localize validation messages
- fixed: Xtflog contains not all messages
- fixed: invalid ring lines Error - failed to build polygons
- fixed: Constraints in association: compare objects not possible
- iox-ili-1.20.11
- ili2c-5.0.0
