@@ -1,0 +1,11 @@
+SCNT
+////
+MTID INTERLIS1
+MODL Simple
+TOPI TestA
+TABL ClassA1
+OBJE 1 0
+ETAB
+ETOP
+EMOD
+ENDE
