@@ -1,0 +1,15 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<TRANSFER xmlns="http://www.interlis.ch/INTERLIS2.2">
+	<HEADERSECTION SENDER="ili2c-4.5.22-20160520" VERSION="2.3">
+		<MODELS>
+			<MODEL NAME="Simple" VERSION="2011-12-22" URI="http://interlis.ch"></MODEL>
+		</MODELS>
+	</HEADERSECTION>
+	<DATASECTION>
+		<Simple.TestA BID="xb1">
+			<Simple.TestA.ClassA1 TID="xo1">
+				<attr22>a22</attr22>
+			</Simple.TestA.ClassA1>
+		</Simple.TestA>
+	</DATASECTION>
+</TRANSFER>
