@@ -1,0 +1,16 @@
+INTERLIS 2.4;
+
+MODEL Simple
+  AT "mailto:ce@eisenhutinformatik.ch" VERSION "2020-03-24" =
+  IMPORTS Basis;
+  
+  TOPIC TestA =
+    
+    CLASS ClassA1 =
+    	attr24 : Basis.Domain24;
+    END ClassA1;
+    
+  END TestA;
+  
+  
+END Simple.
